Changelog: Expose hardcoded colors
Change-Id: Ifef03831544650b2a4378ded3f80196181b81896

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3334,5 +3334,7 @@
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.komodo.settings.fragments.GamingMode" />
         </activity>
+
+	    <activity android:name=".deviceinfo.Changelog" />
     </application>
 </manifest>
